--- a/artwork.html
+++ b/artwork.html
@@ -525,11 +525,11 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-           <iframe class="artdesign" src="https://vimeo.com/316818216" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+           <iframe class="artdesign" src="/videos/themanwithoutqualities.mp4" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="https://vimeo.com/316818216">The man without qualities</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+        <p class="annotation"><a href="/videos/themanwithoutqualities.mp4">The man without qualities</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         <p class="">The man without qualities<a href=""></a></p>
       </div>
     </div>
@@ -544,7 +544,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href="https://vimeo.com/158437381">Engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-        <p class="">A film exploring gender, gesture, and dance.<a href=""></a></p>
+        <p class="">A film exploring gender and gesture.<a href=""></a></p>
       </div>
     </div>
 
