--- a/artwork.html
+++ b/artwork.html
@@ -525,7 +525,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-           <iframe class="artdesign" src="/videos/themanwithoutqualities.mp4" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+           <iframe class="artdesign" src="/videos/themanwithoutqualities.mp4?autoplay=false" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
