--- a/index.html
+++ b/index.html
@@ -40,16 +40,11 @@
   </div>
 
   <div class="col-lg-offset-3 col-md-offset-3 col-sm-offset-4 col-xs-offset-3 col-lg-1 col-md-1 col-sm-1 col-xs-1">
-      <!-- <div id="profile_background"></div>
-      <img id="profile" src="/images/profile.jpg"> -->
   </div>
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
       <ul>
-        <p>Paul Yuryevich Chubinsky is an educator and designer living and working in Houston, TX. In Russian, he's Pavel, in Spanish, he's Pablo, and in Ukrainian, he's Pavlo.</p>
-        <!-- <p>Pavlo is a question transplanted into the southwest side of Houston from Western Chernivtsi by way of a lucky number, a green card, and a blue passport, feeling yellow for a new dance, and a hop, skip, and a jump away from a deep red proclivity to blur with the exchanges that keep the conversation spiraling towards a new center.</p> -->
-        <!-- <li><p>I was born in Chernivtsi, Ukraine and raised in Houston, Texas.</p></li>
-        <li><p>I attended college in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts.</p></li> -->
+        <p>Paul Yuryevich Chubinsky is an educator and designer living and working in Houston, TX. In Russian, he's Pavel, in Spanish, he's Pablo, and in Ukrainian, he's Pavlo. This site was made with love and raw code.</p>
       </ul>
   </div>
 
