--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
       <ul>
-        <p>Paul Chubinskiy is an educator and designer living and working in Houston, TX. In Russian, he's Pavel, in Spanish, he's Pablo, and in Ukrainian, he's Pavlo. This site was coded and designed from scratch.</p>
+        <p>Paul Chubinskiy is an educator and designer living and working in Houston, TX. In Russian, he's Pavel, in Spanish, he's Pablo, and in Ukrainian, he's Pavlo. He coded and designed this site from scratch.</p>
       </ul>
   </div>
 
