--- a/design.html
+++ b/design.html
@@ -42,6 +42,19 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/bodyscrub.png">
+          <img class="artdesign" src="/images/bodyscrub.png" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/pdfs/IBO_Brochure.pdf">
           <img class="artdesign" src="/images/IBO_Brochure_front_resized.png" style="">
         </a>
