--- a/artwork.html
+++ b/artwork.html
@@ -63,7 +63,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">An iteration in an institutinoal critique of whiteness<a href=""></a></p>
+        <p class="annotation">An iteration in an institutinoal critique<a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
