--- a/artwork.html
+++ b/artwork.html
@@ -80,7 +80,7 @@
     </div>
 
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
            <iframe class="artdesign" src="https://player.vimeo.com/video/158437381" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
@@ -89,7 +89,7 @@
         <p class="annotation"><a href="https://vimeo.com/158437381">Engendering</a> with music from I Am Who I Am - The Books by <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         <p class="">A film modeled after Samuel R Delany's The Tale of Gorgik that explores gender.<a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
